fixes photography hiding behind nav

--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -127,6 +127,7 @@
 
 mat-sidenav-content {
   background: transparent;
+  z-index: auto;
 }
 
 @media (max-width: 900px) {
